samples/_failures_safe/1761439955_c77e9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc1137e7.c: In function ‘display_stats’:
./samples/SAFE/__tmp_dc1137e7.c:136:5: error: expected declaration or statement at end of input
  136 |     printf("Log Analysis Results:\n");
      |     ^~~~~~
